--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,26 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+dist/
+.DS_Store
+target/
+.gradle/
+.idea/
+build/
+classes/
+out/
+*.db
+*.log
+*.iml
+.classpath
+.factorypath
+bin/
+.settings/
+.project
+*/test/
+*/META-INF/
+*.ipr
+*.iws
+.kotlintest
+*/.kotlintest/
